# libqrencode-wb

./: README.md
src/: CMakeLists.txt  config.h
